--- a/frontend/main_landing_page.html
+++ b/frontend/main_landing_page.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>음잘딱깔센 - 음악 서비스 통합</title>
-    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
+    <!-- 수정: 맨 앞 '/' 제거 -->
+    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <style>
         body {
             margin: 0;
@@ -148,7 +149,8 @@
     </header>
 
     <main>
-        <img src="/static/logo.png" alt="로고" class="main-logo" onerror="this.src='https://placehold.co/150x150/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
+        <!-- 수정: 맨 앞 '/' 제거 -->
+        <img src="static/logo.png" alt="로고" class="main-logo" onerror="this.src='https://placehold.co/150x150/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
         <h1 class="main-heading">음잘딱깔센</h1>
         <p class="tagline">
             음악 장르도 딱! 깔끔하게 분석하고, 당신의 감성에 딱! 맞는<br />
@@ -157,11 +159,13 @@
 
         <div class="feature-container">
             <a href="genre_index.html" class="feature-card">
-                <img src="/static/music_genre_classification.png" alt="음악 장르 분류" class="feature-image" onerror="this.src='https://placehold.co/250x250/cccccc/000000?text=Genre'; this.alt='장르 분류 이미지 없음';" />
+                <!-- 수정: 맨 앞 '/' 제거 -->
+                <img src="static/music_genre_classification.png" alt="음악 장르 분류" class="feature-image" onerror="this.src='https://placehold.co/250x250/cccccc/000000?text=Genre'; this.alt='장르 분류 이미지 없음';" />
                 <div class="feature-text">음악 장르 분류</div>
             </a>
             <a href="recommend_index.html" class="feature-card">
-                <img src="/static/music_recommendation.png" alt="음악 추천" class="feature-image" onerror="this.src='https://placehold.co/250x250/cccccc/000000?text=Recommend'; this.alt='음악 추천 이미지 없음';" />
+                <!-- 수정: 맨 앞 '/' 제거 -->
+                <img src="static/music_recommendation.png" alt="음악 추천" class="feature-image" onerror="this.src='https://placehold.co/250x250/cccccc/000000?text=Recommend'; this.alt='음악 추천 이미지 없음';" />
                 <div class="feature-text">음악 추천</div>
             </a>
         </div>
@@ -172,7 +176,7 @@
     </footer>
 
     <script>
-        // 이미지 로드 오류 발생 시 대체 이미지로 변경하는 스크립트
+        // 이 스크립트는 외부 API 호출이나 페이지 이동 로직이 없으므로 수정할 필요가 없습니다.
         document.querySelector('.main-logo').onerror = function() {
             this.src = 'https://placehold.co/150x150/cccccc/000000?text=Logo';
             this.alt = '로고 (이미지 없음)';
