--- a/frontend/recommend_index.html
+++ b/frontend/recommend_index.html
@@ -4,272 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>음악 추천 | 음잘딱깔센</title>
-    <link rel="icon" href="{{ url_for('static', filename='favicon.ico', v='1') }}" type="image/x-icon">
+    <!-- 수정: 상대 경로로 변경 -->
+    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(to bottom right, #a3c8f5, #4a90e2);
-            color: #333;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        header {
-            display: flex;
-            align-items: center;
-            background-color: transparent;
-            padding: 1rem 2rem;
-        }
-
-        .logo-link {
-            text-decoration: none;
-        }
-
-        .logo-image {
-            height: 50px;
-        }
-
-        main {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            padding: 2rem;
-        }
-
-        /* 새로 추가된 메인 제목 스타일 */
-        .main-heading {
-            font-size: 3rem; /* 더 큰 글씨 크기 */
-            font-weight: bold;
-            color: #333; /* 어두운 색상으로 대비 */
-            margin-bottom: 2rem; /* 제목 아래 여백 */
-            text-align: center; /* 가운데 정렬 */
-            text-shadow: 0 2px 4px rgba(0,0,0,0.2); /* 은은한 그림자 */
-        }
-
-        .chat-box {
-            background-color: #ffffffcc;
-            padding: 3rem;
-            border-radius: 20px;
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
-            max-width: 600px;
-            width: 90%;
-            display: flex;
-            flex-direction: column;
-            gap: 1.5rem;
-        }
-
-        .chat-box h2 {
-            margin: 0;
-            font-size: 1.8rem;
-        }
-
-        textarea {
-            width: 100%;
-            height: 120px;
-            font-size: 1.2rem;
-            padding: 1rem;
-            border-radius: 10px;
-            border: 1px solid #ccc;
-            resize: none;
-        }
-
-        .send-button {
-            background-color: #4a90e2;
-            color: white;
-            font-size: 1.2rem;
-            padding: 1rem;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .send-button:hover {
-            background-color: #357abd;
-        }
-
-        #loading-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            display: none;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            z-index: 1000;
-            color: white;
-        }
-
-        .spinner {
-            width: 80px;
-            height: 80px;
-            border: 10px solid rgba(255, 255, 255, 0.3);
-            border-top: 10px solid white;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .loading-text {
-            font-size: 2rem;
-            font-weight: bold;
-            margin-top: 2rem;
-            animation: blink 1.5s infinite;
-        }
-
-        @keyframes blink {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.5; }
-        }
-
-        /* 이미지 중앙 정렬을 위한 스타일 추가 */
-        .chat-box img {
-            margin: 0 auto; /* 좌우 마진을 자동으로 설정하여 가운데 정렬 */
-            display: block; /* 블록 레벨 요소로 만들어 margin: auto가 작동하도록 함 */
-            width: 100%;
-            max-width: 300px;
-            border-radius: 15px;
-            margin-bottom: 1rem;
-        }
-
-        /* 오류 메시지 스타일 */
-        .error-message {
-            color: #d9534f; /* 빨간색 계열 */
-            background-color: #f2dede;
-            border: 1px solid #ebccd1;
-            padding: 1rem;
-            margin-top: 1.5rem;
-            border-radius: 8px;
-            font-weight: bold;
-            display: none; /* 기본적으로 숨김 */
-            width: 100%; /* 부모 요소에 맞춤 */
-            box-sizing: border-box; /* 패딩이 너비에 포함되도록 */
-        }
-
-        .navigation-buttons {
-            margin-top: 2rem;
-            display: flex;
-            gap: 1.5rem;
-            justify-content: center;
-            width: 100%;
-            max-width: 500px;
-        }
-
-        .nav-button {
-            padding: 0.8rem 2rem;
-            font-size: 1rem;
-            background-color: #6c757d; /* 회색 계열 */
-            color: white;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            flex: 1; /* 공간 균등 분배 */
-            text-decoration: none; /* 링크 스타일 제거 */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .nav-button:hover {
-            background-color: #5a6268;
-        }
-
-        @media (max-width: 600px) {
-            main {
-                padding: 1rem;
-            }
-            .main-heading {
-                font-size: 2rem;
-                margin-bottom: 1.5rem;
-            }
-            .chat-box {
-                padding: 2rem;
-                gap: 1rem;
-            }
-            textarea {
-                font-size: 1rem;
-                height: 100px;
-            }
-            .send-button {
-                font-size: 1rem;
-                padding: 0.8rem;
-            }
-            .loading-text {
-                font-size: 1.5rem;
-            }
-            .spinner {
-                width: 60px;
-                height: 60px;
-                border-width: 8px;
-            }
-            .navigation-buttons {
-                flex-direction: column;
-                gap: 1rem;
-            }
-            .nav-button {
-                width: 100%;
-            }
-        }
-        footer {
-            margin-top: auto;
-            padding: 1rem;
-            text-align: center;
-            color: #777;
-            font-size: 0.9em;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        footer p {
-            margin: 0.5rem 0;
-        }
-        footer a {
-            color: #0056b3;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
+        /* CSS는 변경할 필요가 없으므로 생략합니다. */
+        body { margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(to bottom right, #a3c8f5, #4a90e2); color: #333; height: 100vh; display: flex; flex-direction: column; }
+        header { display: flex; align-items: center; background-color: transparent; padding: 1rem 2rem; }
+        .logo-link { text-decoration: none; }
+        .logo-image { height: 50px; }
+        main { flex-grow: 1; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; }
+        .main-heading { font-size: 3rem; font-weight: bold; color: #333; margin-bottom: 2rem; text-align: center; text-shadow: 0 2px 4px rgba(0,0,0,0.2); }
+        .chat-box { background-color: #ffffffcc; padding: 3rem; border-radius: 20px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2); max-width: 600px; width: 90%; display: flex; flex-direction: column; gap: 1.5rem; }
+        .chat-box h2 { margin: 0; font-size: 1.8rem; }
+        textarea { width: 100%; height: 120px; font-size: 1.2rem; padding: 1rem; border-radius: 10px; border: 1px solid #ccc; resize: none; }
+        .send-button { background-color: #4a90e2; color: white; font-size: 1.2rem; padding: 1rem; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s ease; }
+        .send-button:hover { background-color: #357abd; }
+        #loading-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); display: none; justify-content: center; align-items: center; flex-direction: column; z-index: 1000; color: white; }
+        .spinner { width: 80px; height: 80px; border: 10px solid rgba(255, 255, 255, 0.3); border-top: 10px solid white; border-radius: 50%; animation: spin 1s linear infinite; }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        .loading-text { font-size: 2rem; font-weight: bold; margin-top: 2rem; animation: blink 1.5s infinite; }
+        @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
+        .chat-box img { margin: 0 auto; display: block; width: 100%; max-width: 300px; border-radius: 15px; margin-bottom: 1rem; }
+        .error-message { color: #d9534f; background-color: #f2dede; border: 1px solid #ebccd1; padding: 1rem; margin-top: 1.5rem; border-radius: 8px; font-weight: bold; display: none; width: 100%; box-sizing: border-box; }
+        .navigation-buttons { margin-top: 2rem; display: flex; gap: 1.5rem; justify-content: center; width: 100%; max-width: 500px; }
+        .nav-button { padding: 0.8rem 2rem; font-size: 1rem; background-color: #6c757d; color: white; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s ease; flex: 1; text-decoration: none; display: flex; align-items: center; justify-content: center; }
+        .nav-button:hover { background-color: #5a6268; }
+        footer { margin-top: auto; padding: 1rem; text-align: center; color: #777; font-size: 0.9em; width: 100%; box-sizing: border-box; }
+        footer p { margin: 0.5rem 0; }
+        footer a { color: #0056b3; text-decoration: none; }
+        footer a:hover { text-decoration: underline; }
+        @media (max-width: 600px) { main { padding: 1rem; } .main-heading { font-size: 2rem; margin-bottom: 1.5rem; } .chat-box { padding: 2rem; gap: 1rem; } textarea { font-size: 1rem; height: 100px; } .send-button { font-size: 1rem; padding: 0.8rem; } .loading-text { font-size: 1.5rem; } .spinner { width: 60px; height: 60px; border-width: 8px; } .navigation-buttons { flex-direction: column; gap: 1rem; } .nav-button { width: 100%; } }
     </style>
 </head>
 <body>
     <header>
-        <!-- 로고 클릭 시 메인 랜딩 페이지로 이동 (절대 경로) -->
-        <a href="http://127.0.0.1:8000" class="logo-link">
-            <img src="{{ url_for('static', filename='logo.png') }}" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
+        <!-- 수정: 상대 경로로 변경 -->
+        <a href="main_landing_page.html" class="logo-link">
+            <!-- 수정: 상대 경로로 변경 -->
+            <img src="static/logo.png" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
         </a>
     </header>
 
     <main>
         <h1 class="main-heading">음악 추천</h1>
         <div class="chat-box">
-            <img src="{{ url_for('static', filename='music_recommendation.png') }}" alt="음악 추천 이미지" onerror="this.src='https://placehold.co/300x200/cccccc/000000?text=Recommendation+Image'; this.alt='음악 추천 이미지 (없음)';" />
+            <!-- 수정: 상대 경로로 변경 -->
+            <img src="static/music_recommendation.png" alt="음악 추천 이미지" onerror="this.src='https://placehold.co/300x200/cccccc/000000?text=Recommendation+Image'; this.alt='음악 추천 이미지 (없음)';" />
             <h2>어떤 음악을 추천해 드릴까요?</h2>
             <form id="recommend-form">
                 <textarea id="user-text" placeholder="예: '신나는 음악 추천해줘!', '공부할 때 들을 조용한 노래', '기분 전환할 때 좋은 노래'"></textarea>
                 <button type="submit" class="send-button">메시지 보내기</button>
             </form>
-            <p class="error-message" style="display: none;"></p> {# 오류 메시지 표시를 위한 요소 #}
+            <p class="error-message" style="display: none;"></p>
         </div>
 
-        <!-- 메인 페이지로 돌아가는 버튼 추가 -->
         <div class="navigation-buttons">
-            <a href="http://127.0.0.1:8000" class="nav-button">메인 페이지로 돌아가기</a>
+            <!-- 수정: 상대 경로로 변경 -->
+            <a href="main_landing_page.html" class="nav-button">메인 페이지로 돌아가기</a>
         </div>
     </main>
 
+    <!-- 로딩 화면 (기존 recommend_loading_page.html의 내용 통합) -->
     <div id="loading-overlay">
         <div class="spinner"></div>
         <div class="loading-text">추천 음악을 찾고 있어요..!</div>
@@ -280,10 +75,17 @@
     </footer>
 
     <script>
+        // ======================================================================
+        // ★★★★★ 수정: API 엔드포인트 URL을 플레이스홀더로 변경 ★★★★★
+        // 나중에 Google Cloud Run에 'music_recommendation_app'을 배포하고 얻은 실제 URL로 이 값을 교체해야 합니다.
+        // 예: const API_ENDPOINT = 'https://music-recommendation-service-abcdef-an.a.run.app/recommend';
+        const API_ENDPOINT = 'YOUR_RECOMMEND_APP_URL/recommend';
+        // ======================================================================
+
         const recommendForm = document.getElementById('recommend-form');
         const userTextInput = document.getElementById('user-text');
         const loadingOverlay = document.getElementById('loading-overlay');
-        const errorMessageElement = document.querySelector('.error-message'); // 오류 메시지 요소 선택
+        const errorMessageElement = document.querySelector('.error-message');
 
         function displayError(message) {
             errorMessageElement.textContent = '오류 발생: ' + message;
@@ -297,10 +99,15 @@
 
         recommendForm.addEventListener('submit', async function (e) {
             e.preventDefault();
-            hideError(); // 새로운 요청 전에 오류 메시지 숨기기
+            hideError();
 
+            // ★★★★★ 수정: API 엔드포인트 URL 확인 로직 추가 ★★★★★
+            if (API_ENDPOINT.includes('YOUR_RECOMMEND_APP_URL')) {
+                displayError('API 엔드포인트 URL이 설정되지 않았습니다. Javascript 코드를 확인해주세요.');
+                return;
+            }
+            
             const userText = userTextInput.value.trim();
-
             if (!userText) {
                 displayError('어떤 음악을 추천해 드릴지 입력해주세요!');
                 return;
@@ -312,34 +119,41 @@
                 const formData = new FormData();
                 formData.append('user_message', userText);
 
-                const response = await fetch('/recommend', {
+                // 수정: fetch URL을 API_ENDPOINT 변수로 변경
+                const response = await fetch(API_ENDPOINT, {
                     method: 'POST',
                     body: formData
                 });
 
                 if (!response.ok) {
-                    const errorData = await response.json();
-                    throw new Error(errorData.error || '알 수 없는 오류');
+                    const errorText = await response.text();
+                    let errorMessage = '알 수 없는 서버 오류';
+                    try {
+                        const errorData = JSON.parse(errorText);
+                        errorMessage = errorData.error || errorMessage;
+                    } catch (jsonError) {
+                        errorMessage = `서버 응답 오류 (상태 코드: ${response.status}): ${errorText.substring(0, 200)}`;
+                    }
+                    throw new Error(errorMessage);
                 }
 
                 const data = await response.json();
                 
-                window.location.href = `/recommend_result?user_message=${encodeURIComponent(data.user_message)}&recommendation_info_json=${encodeURIComponent(JSON.stringify(data.recommendation_info))}`;
+                // ★★★★★ 수정: 페이지 이동 경로를 'recommend_result_page.html'로 정확히 명시 ★★★★★
+                window.location.href = `recommend_result_page.html?user_message=${encodeURIComponent(data.user_message)}&recommendation_info_json=${encodeURIComponent(JSON.stringify(data.recommendation_info))}`;
 
             } catch (error) {
                 console.error('음악 추천 요청 중 오류 발생:', error);
-                displayError(error.message); // 오류 메시지 표시
+                displayError(error.message);
             } finally {
                 loadingOverlay.style.display = 'none';
             }
         });
 
-        // 이미지 로드 실패 시 대체 이미지 설정 (로고)
         document.querySelector('.logo-image').onerror = function() {
             this.src = 'https://placehold.co/50x50/cccccc/000000?text=Logo';
             this.alt = '로고 (이미지 없음)';
         };
-        // 음악 추천 이미지 로드 실패 시 대체 이미지 설정
         document.querySelector('img[alt="음악 추천 이미지"]').onerror = function() {
             this.src = 'https://placehold.co/300x200/cccccc/000000?text=Recommendation+Image';
             this.alt = '음악 추천 이미지 (없음)';
