--- a/frontend/recommend_index.html
+++ b/frontend/recommend_index.html
@@ -3,21 +3,55 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>음악 추천 | 음잘딱깔센</title>
-    <!-- 수정: 상대 경로로 변경 -->
+    <title>감정 기반 음악 추천 | PickNFit</title>
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <style>
-        /* CSS는 변경할 필요가 없으므로 생략합니다. */
-        body { margin: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: linear-gradient(to bottom right, #a3c8f5, #4a90e2); color: #333; height: 100vh; display: flex; flex-direction: column; }
+        /* ★★★ 1. 폰트 변경: '양진체' 폰트 적용 ★★★ */
+        @font-face {
+            font-family: '양진체';
+            src: url('https://fastly.jsdelivr.net/gh/supernovice-lab/font@0.9/yangjin.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        body { 
+            margin: 0; 
+            /* ★★★ 1. 폰트 변경: body 전체에 '양진체'를 기본 폰트로 설정 ★★★ */
+            font-family: '양진체', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+            /* ★★★ 2. 배경 변경: 몽환적인 푸른 계열 그라데이션 적용 ★★★ */
+            background: linear-gradient(135deg, #a8e0ff, #8ee3f5, #97b2ff, #c79aff); 
+            color: #333; 
+            min-height: 100vh; 
+            display: flex; 
+            flex-direction: column; 
+        }
+        
         header { display: flex; align-items: center; background-color: transparent; padding: 1rem 2rem; }
         .logo-link { text-decoration: none; }
         .logo-image { height: 50px; }
         main { flex-grow: 1; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 2rem; }
-        .main-heading { font-size: 3rem; font-weight: bold; color: #333; margin-bottom: 2rem; text-align: center; text-shadow: 0 2px 4px rgba(0,0,0,0.2); }
-        .chat-box { background-color: #ffffffcc; padding: 3rem; border-radius: 20px; box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2); max-width: 600px; width: 90%; display: flex; flex-direction: column; gap: 1.5rem; }
+        .main-heading { 
+            font-size: 3rem; 
+            font-weight: bold; 
+            color: #2c3e50; /* 가독성을 위한 색상 조정 */
+            margin-bottom: 2rem; 
+            text-align: center; 
+            text-shadow: 0 2px 4px rgba(0,0,0,0.15); 
+        }
+        .chat-box { 
+            background-color: rgba(255, 255, 255, 0.8); /* 배경에 맞춰 투명도 조정 */
+            padding: 3rem; 
+            border-radius: 20px; 
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15); 
+            max-width: 600px; 
+            width: 90%; 
+            display: flex; 
+            flex-direction: column; 
+            gap: 1.5rem; 
+        }
         .chat-box h2 { margin: 0; font-size: 1.8rem; }
-        textarea { width: 100%; height: 120px; font-size: 1.2rem; padding: 1rem; border-radius: 10px; border: 1px solid #ccc; resize: none; }
-        .send-button { background-color: #4a90e2; color: white; font-size: 1.2rem; padding: 1rem; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s ease; }
+        textarea { width: 100%; height: 120px; font-size: 1.2rem; padding: 1rem; border-radius: 10px; border: 1px solid #ccc; resize: none; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        .send-button { background-color: #4a90e2; color: white; font-size: 1.2rem; padding: 1rem; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s ease; font-family: inherit; }
         .send-button:hover { background-color: #357abd; }
         #loading-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); display: none; justify-content: center; align-items: center; flex-direction: column; z-index: 1000; color: white; }
         .spinner { width: 80px; height: 80px; border: 10px solid rgba(255, 255, 255, 0.3); border-top: 10px solid white; border-radius: 50%; animation: spin 1s linear infinite; }
@@ -25,13 +59,21 @@
         .loading-text { font-size: 2rem; font-weight: bold; margin-top: 2rem; animation: blink 1.5s infinite; }
         @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
         .chat-box img { margin: 0 auto; display: block; width: 100%; max-width: 300px; border-radius: 15px; margin-bottom: 1rem; }
-        .error-message { color: #d9534f; background-color: #f2dede; border: 1px solid #ebccd1; padding: 1rem; margin-top: 1.5rem; border-radius: 8px; font-weight: bold; display: none; width: 100%; box-sizing: border-box; }
+        .error-message { color: #d9534f; background-color: #f2dede; border: 1px solid #ebccd1; padding: 1rem; margin-top: 1.5rem; border-radius: 8px; font-weight: bold; display: none; width: 100%; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
         .navigation-buttons { margin-top: 2rem; display: flex; gap: 1.5rem; justify-content: center; width: 100%; max-width: 500px; }
-        .nav-button { padding: 0.8rem 2rem; font-size: 1rem; background-color: #6c757d; color: white; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s ease; flex: 1; text-decoration: none; display: flex; align-items: center; justify-content: center; }
+        .nav-button { padding: 0.8rem 2rem; font-size: 1rem; background-color: #6c757d; color: white; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s ease; flex: 1; text-decoration: none; display: flex; align-items: center; justify-content: center; font-family: inherit; }
         .nav-button:hover { background-color: #5a6268; }
-        footer { margin-top: auto; padding: 1rem; text-align: center; color: #777; font-size: 0.9em; width: 100%; box-sizing: border-box; }
+        footer { 
+            margin-top: auto; 
+            padding: 1rem; 
+            text-align: center; 
+            color: #2c3e50; /* 가독성을 위한 색상 조정 */
+            font-size: 0.9em; 
+            width: 100%; 
+            box-sizing: border-box; 
+        }
         footer p { margin: 0.5rem 0; }
-        footer a { color: #0056b3; text-decoration: none; }
+        footer a { color: #2980b9; text-decoration: none; }
         footer a:hover { text-decoration: underline; }
         @media (max-width: 600px) { main { padding: 1rem; } .main-heading { font-size: 2rem; margin-bottom: 1.5rem; } .chat-box { padding: 2rem; gap: 1rem; } textarea { font-size: 1rem; height: 100px; } .send-button { font-size: 1rem; padding: 0.8rem; } .loading-text { font-size: 1.5rem; } .spinner { width: 60px; height: 60px; border-width: 8px; } .navigation-buttons { flex-direction: column; gap: 1rem; } .nav-button { width: 100%; } }
     </style>
@@ -44,7 +86,7 @@
     </header>
 
     <main>
-        <h1 class="main-heading">음악 추천</h1>
+        <h1 class="main-heading">감정 기반 음악 추천</h1>
         <div class="chat-box">
             <img src="static/music_recommendation.png" alt="음악 추천 이미지" onerror="this.src='https://placehold.co/300x200/cccccc/000000?text=Recommendation+Image'; this.alt='음악 추천 이미지 (없음)';" />
             <h2>어떤 음악을 추천해 드릴까요?</h2>
@@ -66,15 +108,11 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 음잘딱깔센 | Powered by <a href="https://api.getsong.co/" target="_blank">getsong.co</a></p>
+        <p>&copy; 2025 PickNFit (음잘딱깔센) | Powered by <a href="https://api.getsong.co/" target="_blank">getsong.co</a></p>
     </footer>
 
     <script>
-        // ======================================================================
-        // ★★★★★ 수정: API 엔드포인트 URL을 Render 백엔드 서버의 정확한 주소로 설정 ★★★★★
-        // 백엔드 API 경로가 '/recommend' 등과 같다면 주소 끝에 추가해야 합니다.
         const API_ENDPOINT = 'https://music-recommendation-api-mf2u.onrender.com/recommend';
-        // ======================================================================
 
         const recommendForm = document.getElementById('recommend-form');
         const userTextInput = document.getElementById('user-text');
@@ -94,8 +132,6 @@
         recommendForm.addEventListener('submit', async function (e) {
             e.preventDefault();
             hideError();
-
-            // ★★★★★ 수정: 불필요한 URL 확인 로직 삭제 ★★★★★
             
             const userText = userTextInput.value.trim();
             if (!userText) {
