--- a/frontend/genre_result_page.html
+++ b/frontend/genre_result_page.html
@@ -13,6 +13,14 @@
             font-style: normal;
         }
 
+        /* ★★★ 1. 새로운 'SUITE-Regular' 폰트 추가 ★★★ */
+        @font-face {
+            font-family: 'SUITE-Regular';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2') format('woff2');
+            font-weight: 400;
+            font-style: normal;
+        }
+
         body { 
             margin: 0; 
             font-family: '양진체', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
@@ -40,15 +48,25 @@
             margin-bottom: 1rem;
             color: #2c3e50;
         }
-        .genre-info { font-size: 1.1rem; line-height: 1.6; margin-bottom: 2rem; text-align: left; }
-        .genre-info h3 { color: #2c3e50; }
+
+        /* ★★★ 2. 작은 글씨 폰트 적용 ★★★ */
+        .genre-info { 
+            font-size: 1.1rem; 
+            line-height: 1.6; 
+            margin-bottom: 2rem; 
+            text-align: left;
+            font-family: 'SUITE-Regular', sans-serif;
+        }
+        .genre-info h3 { 
+            color: #2c3e50;
+            font-family: '양진체', sans-serif; /* h3 제목은 다시 양진체로 */
+        }
         .genre-info strong { color: #0056b3; }
         .recommend-section { display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; margin-top: 1.5rem; }
         .recommend-item { background: white; padding: 1rem; border-radius: 10px; width: 200px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); text-align: center; }
-        .recommend-item a { text-decoration: none; color: #4a90e2; font-weight: bold; display: block; margin-top: 0.5rem; }
+        .recommend-item a { text-decoration: none; color: #4a90e2; font-weight: bold; display: block; margin-top: 0.5rem; font-family: 'SUITE-Regular', sans-serif;}
         .actions { margin-top: 2rem; display: flex; gap: 1.5rem; justify-content: center; }
 
-        /* ★★★ 버튼 폰트 수정 ★★★ */
         .action-button { 
             padding: 0.8rem 2rem; 
             font-size: 1rem; 
@@ -58,7 +76,7 @@
             border-radius: 10px; 
             cursor: pointer; 
             transition: background-color 0.3s ease; 
-            font-family: inherit; /* 부모(body)의 폰트를 상속받도록 설정 */
+            font-family: inherit;
         }
         .action-button:hover { background-color: #357abd; }
         .home-button { 
@@ -74,7 +92,7 @@
             display: flex; 
             align-items: center; 
             justify-content: center;
-            font-family: inherit; /* 부모(body)의 폰트를 상속받도록 설정 */
+            font-family: inherit;
         }
         .home-button:hover { background-color: #5a6268; }
 
@@ -86,6 +104,7 @@
             font-size: 0.9em; 
             width: 100%; 
             box-sizing: border-box; 
+            font-family: 'SUITE-Regular', sans-serif;
         }
         footer p { margin: 0.5rem 0; }
         footer a { color: #0056b3; text-decoration: none; }
