--- a/frontend/recommend_index.html
+++ b/frontend/recommend_index.html
@@ -6,7 +6,6 @@
     <title>감정 기반 음악 추천 | PickNFit</title>
     <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <style>
-        /* ★★★ 1. 폰트 변경: '양진체' 폰트 적용 ★★★ */
         @font-face {
             font-family: '양진체';
             src: url('https://fastly.jsdelivr.net/gh/supernovice-lab/font@0.9/yangjin.woff') format('woff');
@@ -14,11 +13,17 @@
             font-style: normal;
         }
 
+        /* ★★★ 1. 새로운 'SUITE-Regular' 폰트 추가 ★★★ */
+        @font-face {
+            font-family: 'SUITE-Regular';
+            src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/SUITE-Regular.woff2') format('woff2');
+            font-weight: 400;
+            font-style: normal;
+        }
+
         body { 
             margin: 0; 
-            /* ★★★ 1. 폰트 변경: body 전체에 '양진체'를 기본 폰트로 설정 ★★★ */
             font-family: '양진체', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-            /* ★★★ 2. 배경 변경: 몽환적인 푸른 계열 그라데이션 적용 ★★★ */
             background: linear-gradient(135deg, #a8e0ff, #8ee3f5, #97b2ff, #c79aff); 
             color: #333; 
             min-height: 100vh; 
@@ -33,13 +38,13 @@
         .main-heading { 
             font-size: 3rem; 
             font-weight: bold; 
-            color: #2c3e50; /* 가독성을 위한 색상 조정 */
+            color: #2c3e50;
             margin-bottom: 2rem; 
             text-align: center; 
             text-shadow: 0 2px 4px rgba(0,0,0,0.15); 
         }
         .chat-box { 
-            background-color: rgba(255, 255, 255, 0.8); /* 배경에 맞춰 투명도 조정 */
+            background-color: rgba(255, 255, 255, 0.8);
             padding: 3rem; 
             border-radius: 20px; 
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15); 
@@ -49,8 +54,13 @@
             flex-direction: column; 
             gap: 1.5rem; 
         }
-        .chat-box h2 { margin: 0; font-size: 1.8rem; }
-        textarea { width: 100%; height: 120px; font-size: 1.2rem; padding: 1rem; border-radius: 10px; border: 1px solid #ccc; resize: none; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        /* ★★★ 2. 작은 글씨 폰트 적용 ★★★ */
+        .chat-box h2 {
+            font-family: 'SUITE-Regular', sans-serif;
+            margin: 0; 
+            font-size: 1.8rem; 
+        }
+        textarea { width: 100%; height: 120px; font-size: 1.2rem; padding: 1rem; border-radius: 10px; border: 1px solid #ccc; resize: none; font-family: 'SUITE-Regular', sans-serif; }
         .send-button { background-color: #4a90e2; color: white; font-size: 1.2rem; padding: 1rem; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s ease; font-family: inherit; }
         .send-button:hover { background-color: #357abd; }
         #loading-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); display: none; justify-content: center; align-items: center; flex-direction: column; z-index: 1000; color: white; }
@@ -59,7 +69,7 @@
         .loading-text { font-size: 2rem; font-weight: bold; margin-top: 2rem; animation: blink 1.5s infinite; }
         @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
         .chat-box img { margin: 0 auto; display: block; width: 100%; max-width: 300px; border-radius: 15px; margin-bottom: 1rem; }
-        .error-message { color: #d9534f; background-color: #f2dede; border: 1px solid #ebccd1; padding: 1rem; margin-top: 1.5rem; border-radius: 8px; font-weight: bold; display: none; width: 100%; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+        .error-message { color: #d9534f; background-color: #f2dede; border: 1px solid #ebccd1; padding: 1rem; margin-top: 1.5rem; border-radius: 8px; font-weight: bold; display: none; width: 100%; box-sizing: border-box; font-family: 'SUITE-Regular', sans-serif; }
         .navigation-buttons { margin-top: 2rem; display: flex; gap: 1.5rem; justify-content: center; width: 100%; max-width: 500px; }
         .nav-button { padding: 0.8rem 2rem; font-size: 1rem; background-color: #6c757d; color: white; border: none; border-radius: 10px; cursor: pointer; transition: background-color 0.3s ease; flex: 1; text-decoration: none; display: flex; align-items: center; justify-content: center; font-family: inherit; }
         .nav-button:hover { background-color: #5a6268; }
@@ -67,10 +77,11 @@
             margin-top: auto; 
             padding: 1rem; 
             text-align: center; 
-            color: #2c3e50; /* 가독성을 위한 색상 조정 */
+            color: #2c3e50;
             font-size: 0.9em; 
             width: 100%; 
             box-sizing: border-box; 
+            font-family: 'SUITE-Regular', sans-serif;
         }
         footer p { margin: 0.5rem 0; }
         footer a { color: #2980b9; text-decoration: none; }
@@ -112,7 +123,7 @@
     </footer>
 
     <script>
-        const API_ENDPOINT = 'https://music-recommendation-api-mf2u.onrender.com/recommend';
+        const API_ENDPOINT = 'http://127.0.0.1:5001/recommend';
 
         const recommendForm = document.getElementById('recommend-form');
         const userTextInput = document.getElementById('user-text');
